syntax = "proto3";

package scheduler.v1;

import "proto/job/v1/job.proto";
import "google/api/annotations.proto";

option go_package = "github.com/nedson202/dts-go/proto/scheduler/v1;schedulerv1";

service SchedulerService {
  rpc ScheduleJob(ScheduleJobRequest) returns (ScheduleJobResponse) {
    option (google.api.http) = {
      post: "/v1/scheduler/jobs"
      body: "*"
    };
  }

  rpc CancelJob(CancelJobRequest) returns (CancelJobResponse) {
    option (google.api.http) = {
      delete: "/v1/scheduler/jobs/{job_id}"
    };
  }

  rpc GetScheduledJob(GetScheduledJobRequest) returns (GetScheduledJobResponse) {
    option (google.api.http) = {
      get: "/v1/scheduler/jobs/{job_id}"
    };
  }

  rpc ListScheduledJobs(ListScheduledJobsRequest) returns (ListScheduledJobsResponse) {
    option (google.api.http) = {
      get: "/v1/scheduler/jobs"
    };
  }
}

message ScheduleJobRequest {
  job.v1.JobResponse job = 1;
  Resources resource_requirements = 2;
}

message ScheduleJobResponse {
  string schedule_id = 1;
}

message Resources {
  int32 cpu = 1;
  int32 memory = 2;
  int32 storage = 3;
}

message CancelJobRequest {
  string job_id = 1;
}

message CancelJobResponse {
  bool success = 1;
}

message GetScheduledJobRequest {
  string job_id = 1;
}

message GetScheduledJobResponse {
  string job_id = 1;
  string next_execution_time = 3;
  Resources resource_requirements = 4;
}

message ListScheduledJobsRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListScheduledJobsResponse {
  repeated GetScheduledJobResponse jobs = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}
